--- a/FProj_styling copy (2).css
+++ b/FProj_styling copy (2).css
@@ -42,6 +42,47 @@ html {
 #ni{
   background-color: #f7e1e2;
 }
+#moon{
+  height: 50%;
+  width: 35%;
+  margin-right: 50%;
+  margin-top: 5%;
+  border-radius: 50px;
+}
+#moon{
+  height: 50%;
+  width: 35%;
+  float: center;
+  border-radius: 50px;
+}
+#zongzi{
+  height: 10%;
+  width: 10%;
+  float: right;
+  border-radius: 50px;
+}
+#tvshow{
+  height: 40%;
+  width: 40%;
+  float: right;
+  border-radius: 50px;
+}
+#dragon{
+  height: 380px;
+  width: 700px;
+  float: center;
+  border-radius: 50px;
+}
+#happycamp{
+  height: 40%;
+  width: 40%;
+  float: right;
+  border-radius: 50px;
+}
+.description{
+  margin-right: 100px;
+}
+
 /* body {
   background: url(https://pic.chinesefontdesign.com/uploads/2017/03/chinesefontdesign.com_2017-03-20_17-52-49.jpg);
   background-repeat: repeat-y;
@@ -64,6 +105,18 @@ html {
   float: left;
   width: 33.33%;
   background-color: #ceeef5;
+}
+.column5{
+  float: right;
+  width: 400px;
+  height: 268px;
+  border-radius: 50px;
+}
+.column6{
+  float: left;
+  width: 400px;
+  height: 268px;
+  border-radius: 50px;
 }
 /* Clear floats after the columns */
 .row:after {
@@ -103,7 +156,8 @@ html {
 
 
 .Page {
-	text-align: left;
+  font: 13px "Source Sans Pro", Arial, Helvetica, sans-serif;
+  text-align: left;
     font-size: 60px;
     color: #3b3b3b;
     line-height: 80%;
@@ -158,58 +212,21 @@ body, html {
   border-radius: 12px;
 }
 
-.example1 {
- height: 50px;
- overflow: hidden;
- position: relative;
+.moving-letters {
+  position: absolute;
+  top: 25;
+  right: 55;
+  left: 55;
+  bottom: 55;
+  margin: auto;
+  height: 200px;
 }
-.example1 h1 {
-font-size: 50px;
-color: white;
- position: absolute;
- width: 100%;
- height: 100%;
- margin: 0;
- line-height: 50px;
- text-align: left;
- /* Apply animation to this element */
- -moz-animation: example1 5s linear infinite alternate;
- -webkit-animation: example1 5s linear infinite alternate;
- animation: example1 5s linear infinite alternate;
-}
-/* Move it (define the animation) */
-@-moz-keyframes example1 {
- 0%   { -moz-transform: translateX(70%); }
- 100% { -moz-transform: translateX(0%); }
-}
-@-webkit-keyframes example1 {
- 0%   { -webkit-transform: translateX(70%); }
- 100% { -webkit-transform: translateX(0%); }
-}
-@keyframes example1 {
- 0%   {
- -moz-transform: translateX(70%); /* Firefox bug fix */
- -webkit-transform: translateX(70%); /* Firefox bug fix */
- transform: translateX(70%);
- }
- 100% {
- -moz-transform: translateX(0%); /* Firefox bug fix */
- -webkit-transform: translateX(0%); /* Firefox bug fix */
- transform: translateX(0%);
- }
-}
-
-  width: 16.6%;}
-
-
-
-
 
 
 
   /* Style the tab content (and add height:100% for full page content) */
   .tabcontent {
-    color: white;
+    color: black;
     display: none;
     padding: 100px;
     height: 100%;
@@ -219,7 +236,7 @@ color: white;
 
   /* Style tab links */
   .tablink {
-    background-color: #555;
+    background-color: #bae3ff;
     color: white;
     float: left;
     border: none;
