--- a/FProj_styling copy (2).css
+++ b/FProj_styling copy (2).css
@@ -250,26 +250,23 @@ color: white;
 
 
 
-.question{
-	font-weight: 600;
-}
-.answers {
-  margin-bottom: 20px;
-}
-.answers label{
-  display: block;
-}
-#submit{
-	font-family: sans-serif;
-	font-size: 20px;
-	background-color: #279;
-	color: #fff;
-	border: 0px;
-	border-radius: 3px;
-	padding: 20px;
-	cursor: pointer;
-	margin-bottom: 20px;
-}
-#submit:hover{
-	background-color: #38a;
-}
+  .question{
+  	font-weight: 600;
+  }
+  .answers {
+      margin-bottom: 20px;
+  }
+  #submit{
+  	font-family: sans-serif;
+  	font-size: 20px;
+  	background-color: #297;
+  	color: #fff;
+  	border: 0px;
+  	border-radius: 3px;
+  	padding: 20px;
+  	cursor: pointer;
+  	margin-bottom: 20px;
+  }
+  #submit:hover{
+  	background-color: #3a8;
+  }
