--- a/FProj_styling copy (2).css
+++ b/FProj_styling copy (2).css
@@ -257,3 +257,24 @@ body, html {
   #Food {background-color: #ffd9a3;}
   #Conversation {background-color: white;}
   #Tourist {background-color: #bfebb2;}
+
+  .question{
+  	font-weight: 600;
+  }
+  .answers {
+      margin-bottom: 20px;
+  }
+  #submit{
+  	font-family: sans-serif;
+  	font-size: 20px;
+  	background-color: #297;
+  	color: #fff;
+  	border: 0px;
+  	border-radius: 3px;
+  	padding: 20px;
+  	cursor: pointer;
+  	margin-bottom: 20px;
+  }
+  #submit:hover{
+  	background-color: #3a8;
+  }
