--- a/FProj_styling copy (2).css
+++ b/FProj_styling copy (2).css
@@ -25,6 +25,8 @@ html {
 #HP_pic{
 	height: 65%;
 	width: 50%;
+	height: 306px;
+	width: 600px;
   margin-right: 5%;
   margin-top: 5%;
   border-radius: 30px;
@@ -43,16 +45,11 @@ html {
   background-color: #f7e1e2;
 }
 #moon{
+  float: center;
   height: 50%;
   width: 35%;
   margin-right: 50%;
   margin-top: 5%;
-  border-radius: 50px;
-}
-#moon{
-  height: 50%;
-  width: 35%;
-  float: center;
   border-radius: 50px;
 }
 #zongzi{
@@ -113,7 +110,7 @@ html {
   float: left;
   width: 400px;
   height: 268px;
-  margin-left: 70px;
+  margin-left: 30px;
   margin-right:60px;
   border-radius: 50px;
   margin-bottom: 30px;
@@ -169,21 +166,9 @@ body, html {
   height: 100%;
   margin: 0;
   padding-left: 2%;
-  padding-right: 2%;\
+  padding-right: 2%;
 }
 
-
-.parallax {
-  background-image: url('https://pic.chinesefontdesign.com/uploads/2017/03/chinesefontdesign.com_2017-03-20_17-52-49.jpg');
-
-  height: 60%;
-
-  Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 
 
 /* Buttons and stuff */
@@ -226,7 +211,6 @@ body, html {
     color: black;
     display: none;
     padding: 100px;
-    height: 100%;
   }
 
 
