--- a/FProj_styling copy (2).css
+++ b/FProj_styling copy (2).css
@@ -55,10 +55,11 @@ html {
   border-radius: 50px;
 }
 #zongzi{
-  height: 10%;
-  width: 10%;
+  height: 50%;
+  width: 30%;
   float: right;
   border-radius: 50px;
+
 }
 .tvshow{
   height: 40%;
@@ -68,14 +69,16 @@ html {
 }
 #dragon{
   height: 380px;
-  width: 700px;
+  width: 500px;
   float: center;
   border-radius: 50px;
 }
 .description{
-  margin-right: 100px;
-}
-
+  font-family:sans-serif;
+  font-weight: lighter;
+  padding:30px;
+  line-height:30px;
+  font-size: 20px;}
 /* body {
   background: url(https://pic.chinesefontdesign.com/uploads/2017/03/chinesefontdesign.com_2017-03-20_17-52-49.jpg);
   background-repeat: repeat-y;
@@ -101,21 +104,25 @@ html {
 }
 .column5{
   float: right;
-  width: 400px;
-  height: 268px;
-  border-radius: 50px;
+  width: 440px;
+  height: 320px;
+  border-radius: 70px;
   margin-left: 70px;
   margin-right:70px;
-  margin-bottom: 30px;
+  padding-top:30px;
+  padding-bottom: 30px;
+}
+#Chongyang{
+  width: 350px;
 }
 .column6{
   float: left;
-  width: 400px;
-  height: 268px;
+  width: 440px;
+  height: 320px;
   margin-left: 30px;
-  margin-right:60px;
-  border-radius: 50px;
-  margin-bottom: 30px;
+  padding-top:30px;
+  border-radius: 70px;
+  padding-bottom: 30px;
 }
 /* Clear floats after the columns */
 .row:after {
@@ -211,7 +218,7 @@ body, html {
   .tabcontent {
     color: black;
     display: none;
-    padding: 100px;
+    padding: 50px;
   }
 
 
@@ -263,3 +270,44 @@ body, html {
   #submit:hover{
   	background-color: #3a8;
   }
+
+
+
+  .accordion {
+    background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  /* transition: max-height 0.2s ease-out; */
+}
+
+#lion_dance{
+  width: 80%;
+  height: 80%;
+  margin-left: 100px;
+}
+
+
+
+
+.sectionTitle{
+  font-size: 40px;
+
+}
