--- a/FProj_styling copy (2).css
+++ b/FProj_styling copy (2).css
@@ -44,7 +44,9 @@ html {
   margin-right: 50%;
   margin-top: 5%;
   border-radius: 50px;
-}
+    }
+
+
 #wo{
   background-color: #ceeef5;
 }
@@ -54,7 +56,7 @@ html {
 #moon{
   float: center;
   height: 50%;
-  width: 35%;
+  width: 40%;
   margin-right: 50%;
   margin-top: 5%;
   border-radius: 50px;
@@ -73,8 +75,8 @@ html {
   border-radius: 50px;
 }
 #dragon{
-  height: 380px;
-  width: 500px;
+  height: 500px;
+  width: 1000px;
   float: center;
   border-radius: 50px;
 }
@@ -91,7 +93,7 @@ html {
 } */
 .column {
   float: left;
-  width: 33.33%;
+  width: 33%;
 }
 .column2 {
   float: left;
@@ -327,4 +329,77 @@ body, html {
 .correct {
   background: green;
   padding: 0.2em;
+}
+
+
+
+
+
+
+
+/* accordion */
+.accordion{
+  max-width: 1080px;
+  height: 250px;
+  display: flex;
+  overflow: hidden;
+  padding: 50px;
+
+}
+
+.tab{
+  position: relative;
+  width: 20%;
+  height: inherit;
+  padding: 20px;
+  background: #000;
+  color: #FFF;
+  cursor: pointer;
+  transition: width .5s ease;
+}
+
+.tab img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all .5s ease;
+}
+
+.caption{
+  position: absolute;
+  z-index: 2;
+  white-space: nowrap;
+  top: 150px;
+  opacity: 0;
+}
+
+.caption h2{
+  margin-bottom: 2px;
+  text-overflow:clip;
+  font-size:24px;
+  text-transform:uppercase;
+}
+
+.caption p{
+  margin: 0;
+  font-family: 'Open Sans';
+  font-size: .9rem;
+}
+
+/* --- Hover Effects --- */
+
+.tab:hover img{
+  opacity: .6;
+}
+
+.tab:hover{
+  width: 80%;
+}
+
+.tab:hover .caption{
+  transition: all .5s ease;
+  opacity: 1;
 }
